name:               GolfASM
version:            0.1.0.0
synopsis:           A golfing assembly language
homepage:           www.github.com/alexj136/GolfASM
license:            AllRightsReserved
license-file:       LICENSE.md
author:             Alex Jeffery
maintainer:         A.P.Jeffery@sussex.ac.uk
category:           Language
build-type:         Simple
cabal-version:      >=1.10
executable main
  main-is:              Main.hs
  build-depends:        base, containers, array, GolfASM
  hs-source-dirs:       src/main/
  default-language:     Haskell2010
library
  build-depends:        base, containers, array
  hs-source-dirs:       src/lib/
  default-language:     Haskell2010
  exposed-modules:      Lexer, GolfASM
  build-tools:          alex, happy
Test-Suite Tests
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  build-depends:        base,
                        containers,
                        array,
                        GolfASM,
                        QuickCheck
  hs-source-dirs:       src/test/
  default-language:     Haskell2010
